2008-06-02  Maciej Stachowiak  <mjs@apple.com>

        * config.ini: Correct URL for just-added blog.

2008-06-02  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Mark.

        * config.ini: Add Cameron's Summer of JavaScriptCore blog.

2008-02-11  Pierre-Luc Beaudoin  <pierre-luc.beaudoin@collabora.co.uk>

        Reviewed by Alp Toker.

        Add my blog's WebKit category, English only posts.

        * config.ini:

2008-02-11  Adam Roben  <aroben@apple.com>

        Add Brent Fulgham's blog

        Rubberstamped by Alp.

        * config.ini:

2008-02-09  Alp Toker  <alp@atoker.com>

        Only syndicate Jan's WebKit posts, not his entire blog.

        * config.ini:

2007-12-27  Mark Rowe  <mrowe@apple.com>

        Add another feed.

        * config.ini:

2007-12-03  Matt Lilek  <webkit@mattlilek.com>

        Rubberstamped by Tim.

        Make the bullets lickable.

        * wwwroot/planetwebkit.css:

2007-12-03  Matt Lilek  <webkit@mattlilek.com>

        Reviewed by Adam.

        Make it sexy with awesome icon and tweaks from Tim.

        * templates/index.html.tmpl:
        * wwwroot/ie.css: Added.
        * wwwroot/images/ie-nav-blue.png: Added.
        * wwwroot/planetwebkit.css: Added.

2007-12-01  Dan Bernstein  <mitz@apple.com>

        Reviewed by Mark Rowe.

        * config.ini: Correct blog name.

2007-11-30  Adam Roben  <aroben@apple.com>

        Add another feed

        * config.ini:

2007-11-30  Adam Roben  <aroben@apple.com>

        Add a simple script to update the site

        * update.pl: Added.

2007-11-30  Adam Roben  <aroben@apple.com>

        Include all WebKit posts from Trolltech Labs

        * config.ini:

2007-11-30  Adam Roben  <aroben@apple.com>

        Initial checkin of Planet WebKit

        Rubberstamped by Sam.

        * README: Added.
        * config.ini: Added.
        * planet/AUTHORS: Added.
        * planet/INSTALL: Added.
        * planet/LICENCE: Added.
        * planet/NEWS: Added.