@@ -20,7 +20,7 @@ img {
 }
 
 h1, h2, h3 {
-    text-shadow: #bbb 3px 3px 2px;
+    text-shadow: #bbb 2px 2px 2px;
 }
 
 h1 {
